--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -1,5 +1,5 @@
 ---
 deployment:
   tasks:
-    - export DEPLOYPATH=/public/index.html
+    - export DEPLOYPATH=/public/index.html/
     - /bin/cp index.html $DEPLOYPATH
