Added .cpanel.yml file for cPanel deployment

--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -1,5 +1,5 @@
 ---
 deployment:
   tasks:
-    - export DEPLOYPATH=/public/index.html/
+    - export DEPLOYPATH=/home/squires4pub/repositories/SquiresFour/public/
     - /bin/cp index.html $DEPLOYPATH  
